plugins {
    id 'org.springframework.boot' version '2.6.7'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
}

group = 'com.rdfs-onto'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }

}

configurations.configureEach {
    exclude group: 'org.slf4j', module: 'slf4j-nop'
}

repositories {
    mavenCentral()
}

dependencies {

    implementation 'org.springframework.boot:spring-boot-starter-parent:2.7.5'
    implementation 'org.springframework.boot:spring-boot-starter-data-neo4j'
    implementation 'org.springframework.boot:spring-boot-starter-data-rest'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.session:spring-session-core'

    implementation 'org.eclipse.rdf4j:rdf4j-rio-rdfxml:4.2.0'
    implementation 'org.eclipse.rdf4j:rdf4j-rio-turtle:4.2.0'

    implementation 'org.neo4j:neo4j-ogm-core:3.2.38'
    implementation 'org.neo4j:neo4j-ogm-bolt-driver:3.2.38'

    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.testcontainers:junit-jupiter:1.17.6'
    testImplementation "org.testcontainers:neo4j:1.17.6"
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.neo4j.test:neo4j-harness:5.3.0'


    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.keycloak:keycloak-spring-boot-starter:19.0.3'
    implementation 'org.keycloak:keycloak-admin-client:19.0.3'

    implementation 'commons-validator:commons-validator:1.7'

    implementation 'org.springdoc:springdoc-openapi-ui:1.6.13'

    runtimeOnly "com.h2database:h2"

    dependencyManagement {
        imports {
            mavenBom "org.testcontainers:testcontainers-bom:1.17.6"
        }
    }
}

tasks.named('test') {
    useJUnitPlatform()
}

jar {
    manifest {
        attributes(
                'Main-Class': 'com.rdfsonto.rdfsonto.RdfsOntoApplication'
        )
    }
}  